src/Components/Bio/Bio.scss
.bio-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  box-sizing: border-box;
  color: rgb(56, 53, 50);
  background-color: rgb(224, 222, 222);

  box-sizing: border-box;
  justify-content: center;
  text-align: center;
  justify-content: center;
}

.bio-parent {
  position: relative;
  width: 100%;
  text-align: center;
  margin-top: 50px;
}

.bio-title-area {
  justify-content: center;
  align-items: center;
  text-align: center;
  margin: 0;
  padding: 0;
  background-color: rgb(14, 13, 13);
}

.bio-main-title {
  font-size: 24px;
  font-family: "Titillium Web";
  padding: 10px;
}

.bio-subtitle-main {
  font-size: 18px;
  font-family: "Courgette";
  padding: 10px;
  color: rgb(184, 182, 176);
  padding-top: 20px;
}

.bio-subtitle {
  font-size: 18px;
  font-family: "Courgette";
  padding: 0px;
  background-color: #e0dede;
  color: rgb(54, 54, 52);
  color: goldenrod;
  text-shadow: black 2px 0.5px;
  padding-top: 20px;

}

.icon-splay {
  justify-content: space-evenly;
  padding: 0px;
  flex: 1;
  width:100%;
  display: flex;
  flex-wrap: wrap;
  
  
}
.icon-bar-li-bio {
  justify-content: space-evenly;
  pointer-events: none;
  margin-right: 0;
  padding-right: 0;
  color: goldenrod;

  &::after{
    content: '';

  }
}

.microsoft {
  height: 25px;
  background-color: goldenrod;
}

.business-characteristic-parent {
  width: 90%;
  text-align: left;
  justify-content: center;
  text-shadow: none;
}

.business-characteristic-ul {
  font-family: "Telium Web";
  font-size: 16px;
  justify-content: "left";

  text-align: "left";
}

.bullet {
  flex: 1;
  flex-direction: column;
  height: 8px;
  size: inherit;
  display: inline-block;
}

.bullet-pint-description {
  padding-left: 0;
  color: black;
}

.weakness {
  text-shadow: none;
  font-family: "Courgette";
  font-weight: 100;
  font-size: 16px;
  padding: 0px 30px;
}


@media screen and (max-width: 450px) {
  
.icon-splay {
  justify-content: space-evenly;
  flex: 1;
  width:100%;
  display: flex;
  flex-wrap: wrap;
 
  
  
}
.icon-bar-li-bio {
  justify-content: space-evenly;
  pointer-events: none;
  margin-right: 0;
  padding-right: 5px;
  color: goldenrod;
  height: 13px;

  
  &::after{
    content: '';
    
  }
}
        .microsoft {
          height: 13px;
          background-color: goldenrod;
          justify-content: space-evenly;
          pointer-events: none;
          margin-right: inherit;
          padding-right: 0px;
          margin-right: 15px;
        
        }

}

