ui- of bio line spacing whitespace showing between divs correction

--- a/src/Components/Bio/Bio.scss
+++ b/src/Components/Bio/Bio.scss
@@ -4,9 +4,9 @@
   left: 0;
   bottom: 0;
   right: 0;
-  box-sizing: border-box;
+  box-sizing: content-box;
   color: rgb(56, 53, 50);
-  background-color: rgb(224, 222, 222);
+  background-color:  #e0dede;
 
   box-sizing: border-box;
   justify-content: center;
@@ -19,6 +19,7 @@
   width: 100%;
   text-align: center;
   margin-top: 50px;
+  height: 0%;
 }
 
 .bio-title-area {
@@ -52,19 +53,17 @@
   color: rgb(54, 54, 52);
   color: goldenrod;
   text-shadow: black 2px 0.5px;
-  padding-top: 20px;
 
+  // padding-top: 20px;
 }
 
 .icon-splay {
   justify-content: space-evenly;
   padding: 0px;
   flex: 1;
-  width:100%;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  
-  
 }
 .icon-bar-li-bio {
   justify-content: space-evenly;
@@ -73,9 +72,8 @@
   padding-right: 0;
   color: goldenrod;
 
-  &::after{
-    content: '';
-
+  &::after {
+    content: "";
   }
 }
 
@@ -120,42 +118,33 @@
   padding: 0px 30px;
 }
 
-
 @media screen and (max-width: 450px) {
-  
-.icon-splay {
-  justify-content: space-evenly;
-  flex: 1;
-  width:100%;
-  display: flex;
-  flex-wrap: wrap;
- 
-  
-  
-}
-.icon-bar-li-bio {
-  justify-content: space-evenly;
-  pointer-events: none;
-  margin-right: 0;
-  padding-right: 5px;
-  color: goldenrod;
-  height: 13px;
-
-  
-  &::after{
-    content: '';
-    
+  .icon-splay {
+    justify-content: space-evenly;
+    flex: 1;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
   }
-}
-        .microsoft {
-          height: 13px;
-          background-color: goldenrod;
-          justify-content: space-evenly;
-          pointer-events: none;
-          margin-right: inherit;
-          padding-right: 0px;
-          margin-right: 15px;
-        
-        }
+  .icon-bar-li-bio {
+    justify-content: space-evenly;
+    pointer-events: none;
+    margin-right: 0;
+    padding-right: 5px;
+    color: goldenrod;
+    height: 13px;
 
+    &::after {
+      content: "";
+    }
+  }
+  .microsoft {
+    height: 13px;
+    background-color: goldenrod;
+    justify-content: space-evenly;
+    pointer-events: none;
+    margin-right: inherit;
+    padding-right: 0px;
+    margin-right: 15px;
+  }
 }
